Closed Bug 735894 Opened 14 years ago Closed 14 years ago

Fire the image discard timeout more often

Categories

(Core :: Graphics: ImageLib, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla14
Tracking Status
firefox14 --- fixed

People

(Reporter: justin.lebar+bug, Assigned: justin.lebar+bug)

References

Details

Attachments

(1 file)

The main motivation for this is areweslimyet.com. (We're still working out a few bugs before we un-protect it, but I'm happy to give out the password privately.) AWSY waits for 30s before taking some measurements. But images are currently discarded 20-40s after they're unlocked. (This is true even with the rewrite of discarding in bug 732820.) It's kind of lame to make a change primarily for a benchmark, but I don't see much possible harm in firing the discard timer once every 10s instead of once every 20s. We'd leave 20s as the discard timeout; we'd just check for timed-out images twice as frequently, so images would be discarded 20-30s after they're unlocked.
Attached patch Patch v1Splinter Review
Attachment #606000 - Flags: review?(joe)
Assignee: nobody → justin.lebar+bug
This isn't free, of course: we'll use more battery.
(In reply to Joe Drew (:JOEDREW!) from comment #2) > This isn't free, of course: we'll use more battery. I imagine that 1000 extra events use less energy than decoding one large JPEG image -- that is to say, we'd have to fire a lot of extra events before this matters. But perhaps we can think of a pathological case where we'd fire a lot of extra events, or perhaps an event is more expensive than I imagine... I'm OK trying to shim a fix into the config file used by AWSY, rather than changing this pref here, if you're concerned.
Well, of course if we actually re-use those decoded images rather than redecoding them, we'd save that decoding energy too. :) I'm not that conerned about this value. It was not arrived at scientifically. We should just go in to this with eyes open.
Comment on attachment 606000 [details] [diff] [review] Patch v1 Review of attachment 606000 [details] [diff] [review]: ----------------------------------------------------------------- I had initially misread this bug as changing the timeout. However, this just makes us a little more accurate towards our timeout deadlines, which I am fine with.
Attachment #606000 - Flags: review?(joe) → review+
Status: NEW → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla14
Depends on: 746055
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: