Bug 735894 - Fire the discard timeout twice as often, so images are discarded after between 1 and 1.5 discard timeout intervals, instead of between 1 and 2 intervals. r=joe